--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,6 +25,7 @@
 	body {
 		background: $color-bg;
 		overflow: hidden;
+		font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 		
 		&.loading{
 			* {
