--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@
 /* BG */
 
 	#bg {
-		-moz-animation: bg 60s linear infinite;
+		/*-moz-animation: bg 60s linear infinite;
 		-webkit-animation: bg 60s linear infinite;
 		-o-animation: bg 60s linear infinite;
 		-ms-animation: bg 60s linear infinite;
@@ -85,7 +85,7 @@
 		-o-transform: translate3d(0,0,0);
 		-ms-transform: translate3d(0,0,0);
 		transform: translate3d(0,0,0);
-		background-color: #348cb2;
+		background-color: #348cb2;*/
 		background-image: url("images/bg-new.jpg");
 		background-position: bottom left;
 		background-repeat: repeat-x;
