--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@
 		background-color: #348cb2;*/
 		background-image: url("images/bg-new.jpg");
 		background-position: bottom left;
-		background-repeat: repeat-x;
+		/*background-repeat: repeat-x;*/
 		height: 100%;
 		left: 0;
 		opacity: 1;
