--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@
 /* BG */
 
 	#bg {
-		/*-moz-animation: bg 60s linear infinite;
+		-moz-animation: bg 60s linear infinite;
 		-webkit-animation: bg 60s linear infinite;
 		-o-animation: bg 60s linear infinite;
 		-ms-animation: bg 60s linear infinite;
@@ -85,10 +85,10 @@
 		-o-transform: translate3d(0,0,0);
 		-ms-transform: translate3d(0,0,0);
 		transform: translate3d(0,0,0);
-		background-color: #348cb2;*/
-		background-image: url("images/bg-new.jpg");
+		background-color: #348cb2;
+		background-image: url("images/bg.jpg");
 		background-position: bottom left;
-		/*background-repeat: repeat-x;*/
+		background-repeat: repeat-x;
 		height: 100%;
 		left: 0;
 		opacity: 1;
@@ -130,7 +130,6 @@
 		position: fixed;
 		top: 0;
 		width: 100%;
-		background-color:rgba(0,0,0,0.4);
 	}
 
 /* Main */
