--- a/css/style-wide.css
+++ b/css/style-wide.css
@@ -18,8 +18,6 @@
 	@keyframes bg { 0% { -moz-transform: translate3d(0,0,0); -webkit-transform: translate3d(0,0,0); -o-transform: translate3d(0,0,0); -ms-transform: translate3d(0,0,0); transform: translate3d(0,0,0); } 100% { -moz-transform: translate3d(-1300px,0,0); -webkit-transform: translate3d(-1300px,0,0); -o-transform: translate3d(-1300px,0,0); -ms-transform: translate3d(-1300px,0,0); transform: translate3d(-1300px,0,0); } }
 
 	#bg {
-		/*background-size: 1300px auto;
-		width: 3900px;*/
-		background-size:100% auto;
-		width:100%;
+		background-size: 1300px auto;
+		width: 3900px;
 	}
